packages/lang/test/__golden__/config-errors/two-default-envs.txt
error[TF024]: more than one env is marked `default`
 --> tflw.config:1:1
  |
1 | env a default
  | ^^^^^^^^^^^^^
  |
  = help: exactly one env may be the `default`

error[TF024]: more than one env is marked `default`
 --> tflw.config:4:1
  |
4 | env b default
  | ^^^^^^^^^^^^^
  |
  = help: exactly one env may be the `default`
